# robot_trader

./: .gitignore  .slugignore  Procfile  README.md  langgraph.json  oanda.py  pyproject.toml  server.py  weather.py
.langgraph_api/: .langgraph_checkpoint.2.pckl  .langgraph_ops.pckl  .langgraph_retry_counter.pckl
aws_scripts/: deploy.sh  dynamodb_utils.py  lambda_handler.py  s3_upload.py
aws_scripts/templates/: cloudformation.yaml
aws_scripts/workflow/: deploy.yml
bot/: custom_types.py  orchestrator.py  orchestrator_graph.py  requirements.txt  server.py
bot/document_writing_team/: read_write_to_documnet.py  team_graph.py  worker_nodes.py
bot/research_team/: team_graph.py  worker_nodes.py
bot/research_team/tools/: internet_search.py  web_scrapper.py
bot/tools/: account_tools.py  common_nodes.py  common_tools.py  currencies.py  currency_api.py  github.py  helper.py  invoice.py
bot/trade_team/: team_graph.py  worker_nodes.py  worker_nodes_old.py
bot/trade_team/tools/: account_manager.py  forex_aacount_service.py  forex_trade.py  forext_account_tools.py
config/: settings.py
mcp_servers/: metaapi_mcp.py  oandaapi_mcp.py
src/application/services/: oanda_trading_app_service.py
src/bot/: custom_types.py  orchestrator_graph.py
src/bot/tools/: account_nodes.py  account_tools.py  common_nodes.py  common_tools.py  currency_api.py  trade_tools.py
src/domain/entities/: trade.py
src/domain/interfaces/: trading_service.py
src/model_types/: common.py
src/tradebot.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
(+1 files in other folders)
