[project]
name = "tradebot"
version = "0.1.0"
description = "Trading project"
authors = [{ name = "Favour Emmanuel", email = "favouremmanuel433@email.com" }]
dependencies = [
    "boto3>=1.34",
    "awscli>=1.32",
    "httpx>=0.28.1",
    "mcp[cli]>=1.6.0",
    "fastapi>=0.111.0",
    "langgraph>=0.2.73",
    "oandapyV20>=0.7.2",
    "tavily-python>=0.5.4",
    "langchain>=0.3.23",
    "langchain-community>=0.3.21",
    "langchain-openai>=0.3.12",
    "uvicorn>=0.34.0",
    "python-dotenv>=1.1.0",
    "six>=1.17.0",
]
